--- a/deepin-tool-kit/debian/control
+++ b/deepin-tool-kit/debian/control
@@ -21,3 +21,22 @@ Description: Deepin Tool Kit Log library
  DtkLog is standard log library of Deepin Qt/C++ applications.
  .
  This package contains the header files and static libraries of Dtk/Log
+
+Package: libdtkwidget
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: same
+Description: Deepin graphical user interface library
+ DtkWidget is Deepin graphical user interface for deepin desktop development.
+ .
+ This package contains the shared libraries.
+
+Package: libdtkwidget-dev
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkwidget( =${binary:Version}), qtdeclarative5-dev, 
+ qtmultimedia5-dev, libqt5x11extras5-dev
+Description: Deepin graphical user interface library
+ DtkWidget is Deepin graphical user interface for deepin desktop development.
+ .
+ This package contains the header files and static libraries which are
+ needed for developing Deepin applications.
