--- a/deepin-tool-kit/debian/rules
+++ b/deepin-tool-kit/debian/rules
@@ -10,6 +10,9 @@ ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 override_dh_auto_configure:
 	dh_auto_configure -- LIB_INSTALL_DIR=/usr/lib/$(DEB_HOST_MULTIARCH)
 
+override_dh_auto_build:
+	make -j `nproc`
+
 ifeq ($(ARCH), alpha)
 override_dh_strip:
 	dh_strip
