--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
  qtdeclarative5-dev,
  deepin-gettext-tools,
  dde-dock-dev,
- libdui-dev (>> 1.2.2),
+ libdtkwidget-dev,
  qtmultimedia5-dev,
  libqt5svg5-dev,
  qttools5-dev-tools,
