--- a/git-build.conf
+++ b/git-build.conf
@@ -105,6 +105,7 @@ trigger=deepin-file-manager-backend, dde-daemon
 
 [dde-daemon]
 package_host=dde
+branch=dev-15.3
 git=https://cr.deepin.io/dde/dde-daemon
 
 [deepin-mutter]
@@ -164,6 +165,7 @@ git=https://cr.deepin.io/dde/dde-desktop
 
 [dde-dock]
 git=https://cr.deepin.io/dde/dde-dock
+branch=dev-15.3
 
 [dde-launcher]
 git=https://cr.deepin.io/dde/dde-launcher
