--- a/go-dlib/debian/rules
+++ b/go-dlib/debian/rules
@@ -2,6 +2,9 @@
 
 export DH_GOPKG := pkg.deepin.io/lib
 export DH_GOLANG_INSTALL_ALL := 1
+export DEB_BUILD_OPTIONS="nocheck"
+ 
+
 
 %:
 	dh $@ --buildsystem=golang --with=golang
