--- a/deepin-license/debian/control
+++ b/deepin-license/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 9.0~), dh-systemd, qt5-default, pkg-config, qttools
 Standards-Version: 3.9.6
 
 Package: deepin-license-dkms
-Architecture: all
+Architecture: any
 Depends: dkms
 Description: Source code for Deepin License Activator Driver.
 
