--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -3,6 +3,8 @@ Section: utils
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>=9),
+    cmake,
+    g++,
     qt5-qmake,
     qt5-default,
     qtbase5-dev,
