--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>=9),
     qt5-default,
     qtbase5-dev,
     pkg-config,
+    libqrencode-dev,
     libqt5svg5-dev,
     libqt5x11extras5-dev,
     libx11-dev,
