--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>=9),
     qt5-default,
     qtbase5-dev,
     pkg-config,
+    libblkid-dev,
     libparted-dev,
     libqrencode-dev,
     libqt5svg5-dev,
@@ -24,5 +25,6 @@ Homepage: http://www.deepin.org
 Package: deepin-installer-reborn
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+    util-linux,
 Description: Reborn version of deepin installer
  New version of deepin-installer, rewritten with Qt5.
