--- a/dde-polkit-agent/debian/control
+++ b/dde-polkit-agent/debian/control
@@ -2,7 +2,7 @@ Source: dde-polkit-agent
 Section: devel
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@deepin.com>
-Build-Depends: debhelper (>=9), pkg-config, libqt5webkit5-dev, libpolkit-qt5-1-dev, libdtkbase-dev, libdtkwidget-dev,
+Build-Depends: debhelper (>=9), pkg-config, libqt5webkit5-dev, libpolkit-qt5-1-dev, libdtkbase-dev, libdtkwidget-dev,cmake,
 Standards-Version: 3.9.8
 Homepage: http://www.deepin.org
 
