--- a/git-build.conf
+++ b/git-build.conf
@@ -237,3 +237,6 @@ git=https://cr.deepin.io/deepin-shortcut-viewer
 
 [dde-polkit-agent]
 git=https://cr.deepin.io/dde/dde-polkit-agent
+
+[default-settings]
+git=https://cr.deepin.io/default-settings
