--- a/git-build.conf
+++ b/git-build.conf
@@ -238,5 +238,5 @@ git=https://cr.deepin.io/deepin-shortcut-viewer
 [dde-polkit-agent]
 git=https://cr.deepin.io/dde/dde-polkit-agent
 
-[default-settings]
+[deepin-default-settings]
 git=https://cr.deepin.io/default-settings
