--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -30,7 +30,7 @@ Homepage: http://www.linuxdeepin.com
 Package: dde-api
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- rfkill, locales, libcanberra-pulse,
+ rfkill, locales, libcanberra-pulse, blur-effect,
 Description: Go-lang bingdings for dde-daemon
  Go-lang bindings for dde-daemon
 
