--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
- golang-go,
+ golang-go | gccgo-5,
  golang-dlib-dev (>= 0.4.2),golang-gir-gobject-2.0-dev, 
  golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev, golang-gir-gudev-1.0-dev,
  golang-github-burntsushi-xgb-dev,
