--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
  libxcb-image0-dev, libxcb-composite0-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libxcb-damage0-dev, libqt5svg5-dev,
+ libxcb-icccm4-dev,
  libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, qttools5-dev-tools
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
