--- a/deepin-terminal/debian/control
+++ b/deepin-terminal/debian/control
@@ -2,7 +2,10 @@ Source: deepin-terminal
 Section: utils
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@deepin.com>
-Build-Depends: debhelper (>=9),valac, libgtk-3-dev, libgee-dev, libvte-2.91-dev, libjson-glib-dev, libsecret-1-dev
+Build-Depends: debhelper (>=9),valac, libgtk-3-dev, libgee-dev, libvte-2.91-dev,
+libjson-glib-dev, libsecret-1-dev, libwnck-3-dev
+
+
 Standards-Version: 3.9.8
 Homepage: http://www.deepin.org
 
