--- a/deepin-terminal/debian/control
+++ b/deepin-terminal/debian/control
@@ -8,6 +8,7 @@ Homepage: http://www.deepin.org
 
 Package: deepin-terminal
 Architecture: any
+Provides: x-terminal-emulator
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
