--- a/deepin-terminal/debian/control
+++ b/deepin-terminal/debian/control
@@ -9,6 +9,6 @@ Homepage: http://www.deepin.org
 Package: deepin-terminal
 Architecture: any
 Provides: x-terminal-emulator
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, zssh
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
