--- a/deepin-image-viewer/debian/control
+++ b/deepin-image-viewer/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>=9), qt5-qmake, qt5-default, qtbase5-dev, pkg-config, libdtkutil-dev, libdtkwidget-dev, libdtkbase-dev, 
  libexif-dev, libqt5svg5-dev, libqt5x11extras5-dev, libsqlite3-dev,
- qttools5-dev-tools, libxcb-util0-dev
+ qttools5-dev-tools, libxcb-util0-dev, libstartup-notification0-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
