--- a/deepin-tool-kit/debian/control
+++ b/deepin-tool-kit/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), qt5-default, pkg-config, 
  qtdeclarative5-dev, qtmultimedia5-dev, libqt5x11extras5-dev, 
- libxext-dev, x11proto-xext-dev, libxcb-util0-dev, libstartup-notification0-dev
+ libxext-dev, x11proto-xext-dev, libxcb-util0-dev, libstartup-notification0-dev,
+ libmtdev-dev
 Standards-Version: 3.9.6
 
 Package: libdtkbase
