--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -12,7 +12,7 @@ Depends: ${misc:Depends}, deepin-ui, python-mutagen,
  python-gst0.10, python-pyquery, python-cddb,
  python-pycurl, python-chardet, python-keybinder,
  gstreamer0.10-plugins-good, gstreamer0.10-plugins-bad,
- gstreamer0.10-plugins-ugly, python-mmkeys,
+ gstreamer0.10-plugins-ugly, python-mmkeys, python-deepin-gsettings
 Description: Awesome music player with brilliant and tweakful UI
  Deepin-UI based, gstreamer front-end, with features likes search music 
  by pinyin,quanpin, colorful lyrics supports, and more powerful
