--- a/qt5dxcb-plugin/debian/control
+++ b/qt5dxcb-plugin/debian/control
@@ -5,7 +5,7 @@ Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), qt5-default, qtbase5-dev, qtbase5-private-dev, 
  pkg-config, libqt5x11extras5-dev, libxcb-xkb-dev, libxcb-render-util0-dev,
  libxcb-image0-dev, libxcb-icccm4-dev, libxcb-keysyms1-dev, libegl1-mesa-dev,
- libmtdev-dev, libxkbcommon-x11-dev, libdbus-1-dev
+ libmtdev-dev, libxkbcommon-x11-dev, libdbus-1-dev, git, libqt5opengl5-dev, libudev-dev,
 Standards-Version: 3.9.6
 
 Package: libqt5dxcb-plugin
