--- a/qt5dxcb-plugin/debian/control
+++ b/qt5dxcb-plugin/debian/control
@@ -5,12 +5,12 @@ Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), qt5-default, qtbase5-dev, qtbase5-private-dev, 
  pkg-config, libqt5x11extras5-dev, libxcb-xkb-dev, libxcb-render-util0-dev,
  libxcb-image0-dev, libxcb-icccm4-dev, libxcb-keysyms1-dev, libegl1-mesa-dev,
- libmtdev-dev, libxkbcommon-x11-dev, libdbus-1-dev, git, libqt5opengl5-dev, libudev-dev,
+ libmtdev-dev, libxkbcommon-x11-dev, libdbus-1-dev, git, libqt5opengl5-dev, libudev-dev, libxrender-dev, libxi-dev, libsm-dev, libice-dev, libfontconfig1-dev, libfreetype6-dev, libglib2.0-dev,
 Standards-Version: 3.9.6
 
 Package: libqt5dxcb-plugin
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5gui5
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5gui5 (=5.5.1+dfsg-16+b1)
 Multi-Arch: same
 Description: Qt5 Platform Plugin.
  .
