--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -17,7 +17,7 @@ Vcs-Browser: https://gitcafe.com/Deepin/deepin-appstore
 Package: deepin-appstore
 Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
- lastore-daemon (>=0.9.0), deepin-appstore-data
+ lastore-daemon (>=0.9.0), deepin-appstore-data (= ${binary:Version})
 Replaces: dstore-client
 Description: Deepin App Store
  Deepin App Store Client.
