--- a/deepin-terminal/debian/control
+++ b/deepin-terminal/debian/control
@@ -10,5 +10,6 @@ Package: deepin-terminal
 Architecture: any
 Provides: x-terminal-emulator
 Depends: ${shlibs:Depends}, ${misc:Depends}, zssh, lrzsz
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Deepin terminal, it sharpens your focus in the world of command line!
+ Deepin Terminal is an advanced terminal emulator with workspace, multiple windows, remote management, quake mode and other features.
+ It sharpens your focus in the world of command line!
