--- a/deepin-gettext-tools/debian/control
+++ b/deepin-gettext-tools/debian/control
@@ -11,5 +11,5 @@ Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 
 Package: deepin-gettext-tools
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, perl, perl-modules, libxml-libxml-perl, libxml-libxml-prettyprint-perl, libconfig-tiny-perl
 Description: Deepin Internationalization utilities
