--- a/deepin-image-viewer/debian/control
+++ b/deepin-image-viewer/debian/control
@@ -10,6 +10,6 @@ Homepage: http://www.deepin.org
 
 Package: deepin-image-viewer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends},libsqlite3-dev , libqt5sql5-sqlite, libqt5libqgtk2, libraw15, libfreeimage3
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5sql5-sqlite, libqt5libqgtk2, libraw15, libfreeimage3
+Description: Deepin Image Viewer is the Image Viewer for Deepin Desktop Environment(DDE)
+ Deepin Image Viewer is Deepin Desktop Environment Image Viewer.
