--- a/qt5deepintheme-plugin/debian/control
+++ b/qt5deepintheme-plugin/debian/control
@@ -2,7 +2,8 @@ Source: qt5deepintheme-plugin
 Section: devel
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), qt5-default, qtbase5-dev, qtbase5-private-dev, pkg-config
+Build-Depends: debhelper (>= 9), qt5-default, qtbase5-dev, qtbase5-private-dev,
+	pkg-config, libdde-file-manager-dev
 Standards-Version: 3.9.6
 
 Package: libqt5deepintheme-plugin
